cmake_minimum_required (VERSION 2.8)
project(Test_Pb)
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -lpthread -lprotobuf")
include_directories(pb)
aux_source_directory(src/client.cpp DIR_SRCS_CLIENT)
aux_source_directory(src/server.cpp DIR_SRCS_SERVER)
add_executable(client ${DIR_SRCS_CLIENT})
add_executable(server ${DIR_SRCS_SERVER})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
